--- a/Ionic4/src/app/inspection-building/components/building-pnap-detail/building-pnap-detail.component.html
+++ b/Ionic4/src/app/inspection-building/components/building-pnap-detail/building-pnap-detail.component.html
@@ -9,7 +9,7 @@
 
 <ion-content>
 
-    <ion-list [formGroup]="form" class="list-items">
+    <ion-list [formGroup]="form" class="list-items ion-no-padding">
   
       <ion-item-group>
         <ion-item-divider>{{'generalInformation' | translate}}</ion-item-divider>
