--- a/Ionic4/src/app/inspection-building/inspection-building-particular-risks/inspection-building-particular-risks.component.html
+++ b/Ionic4/src/app/inspection-building/inspection-building-particular-risks/inspection-building-particular-risks.component.html
@@ -8,7 +8,29 @@
 
 <ion-content>
 
-<p>building-particulara risks</p>
+    <div class="risk-header">
+        <ion-list-header>{{'particularRisk' | translate}}</ion-list-header>
+    
+        <ion-segment [(ngModel)]="currentSegment" class="segmentRisk">
+          <ion-segment-button value="foundation" class="segment-risk">{{'foundation' | translate}}</ion-segment-button>
+          <ion-segment-button value="floor" class="segment-risk">{{'particularRiskFloor' | translate}}</ion-segment-button>
+          <ion-segment-button value="wall" class="segment-risk">{{'wall' | translate}}</ion-segment-button>
+          <ion-segment-button value="roof" class="segment-risk">{{'roof' | translate}}</ion-segment-button>
+        </ion-segment>
+      </div>
+    
+      <app-building-particular-risk-detail *ngIf="currentSegment=='foundation'" [idBuilding]="idBuilding" riskType="foundation">
+      </app-building-particular-risk-detail>
+    
+      <app-building-particular-risk-detail *ngIf="currentSegment=='floor'" [idBuilding]="idBuilding" riskType="floor">
+      </app-building-particular-risk-detail>
+    
+      <app-building-particular-risk-detail *ngIf="currentSegment=='wall'" [idBuilding]="idBuilding" riskType="wall">
+      </app-building-particular-risk-detail>
+    
+      <app-building-particular-risk-detail *ngIf="currentSegment=='roof'" [idBuilding]="idBuilding" riskType="roof">
+      </app-building-particular-risk-detail>
+    
 
 </ion-content>
 
