--- a/Ionic4/src/app/shared/components/custom-select/custom-select.component.html
+++ b/Ionic4/src/app/shared/components/custom-select/custom-select.component.html
@@ -1,10 +1,11 @@
-<div>
-  <ion-item>
-    <ion-label>{{title}}</ion-label>
-    <ion-icon class="ion-md-close"></ion-icon>
-    <ion-select [value]="selectedValue" placeholder="{{title}}" okText="Ok" cancelText="{{'cancel' | translate}}" (ionChange)="selectedItemChanged($event)">
-      <ion-select-option *ngFor="let item of dataSource">{{item}}</ion-select-option>
-    </ion-select>
-  </ion-item>
-  <button class="action-list-button"(click)="clearSelectedValue()"><ion-icon class="ion-md-close"></ion-icon></button>
-</div>
+
+<ion-item>
+  <ion-label slot="start">{{title}}</ion-label>
+  <ion-select [value]="value" placeholder="{{title}}" okText="Ok" cancelText="{{'cancel' | translate}}" (ionChange)="selectedItemChanged($event)">
+    <ion-select-option *ngFor="let item of dataSource">{{item}}</ion-select-option>
+  </ion-select>
+</ion-item>
+<ion-button slot="end" (click)="clearSelectedValue()" color="clear">
+    <ion-icon slot="icon-only" name="close" color="dark"></ion-icon>
+  </ion-button>
+  
