--- a/Ionic4/src/app/inspection-building/components/building-anomaly-detail/building-anomaly-detail.component.html
+++ b/Ionic4/src/app/inspection-building/components/building-anomaly-detail/building-anomaly-detail.component.html
@@ -8,11 +8,11 @@
 </ion-toolbar>
 
 <ion-content [formGroup]="form">
-  <ion-list class="list-items">
-      <button ion-item [class.invalid]="!form.controls.theme.valid" (click)="onSelectAnomaly()">
-          <ion-label item-start>{{'theme' | translate}}</ion-label>
-          <ion-label item-content>{{form.value.theme}}</ion-label>
-      </button>
+  <ion-list class="list-items ion-no-padding">
+        <ion-item-divider>{{'theme' | translate}}</ion-item-divider>
+      <ion-item [class.invalid]="!form.controls.theme.valid" (click)="onSelectAnomaly()" detail="true">
+          <ion-label>{{form.value.theme}}</ion-label>
+      </ion-item>
       <div *ngIf="!form.controls.theme.valid" class="validation-error-text">{{'requiredInformation' | translate}}</div>
 
       <ion-item-group>
@@ -32,7 +32,7 @@
       <ion-buttons left>
           <ion-button *ngIf="!isNew" (click)="onDeleteAnomaly()">
               <ion-icon name="trash" slot="start"></ion-icon>
-              {{'anomalyDeleteButton' | translate}}
+              {{'anomalyDelete' | translate}}
           </ion-button>
       </ion-buttons>
   </ion-toolbar>
