--- a/Ionic4/src/app/inspection-building/inspection-building-anomalies/inspection-building-anomalies.component.html
+++ b/Ionic4/src/app/inspection-building/inspection-building-anomalies/inspection-building-anomalies.component.html
@@ -7,14 +7,30 @@
 </ion-header>
 
 <ion-content>
-
-<p>building-anomalies</p>
-
-</ion-content>
+    <ion-list class="list-items ion-no-padding">
+      <ion-list-header>{{'buildingAnomalies' | translate}}</ion-list-header>
+      <ion-item-group *ngFor="let theme of themes | orderBy:'theme'">
+  
+        <ion-item-divider>
+          {{theme.theme}}
+          <ion-button slot="end" (click)="onAddAnomalyForTheme(theme.theme)" color="primary">{{'add' | translate}}</ion-button>
+        </ion-item-divider>
+  
+        <ion-item *ngFor="let anomaly of theme.anomalies | orderBy:'notes'" (click)="onItemClick(anomaly.id)">
+          {{anomaly.notes}}
+        </ion-item>
+  
+      </ion-item-group>
+    </ion-list>
+  </ion-content>
 
 <ion-footer>
   <ion-toolbar color="primary">
-
-
+    <ion-buttons slot="start">
+        <ion-button (click)="onAddNewAnomaly()">
+            <ion-icon slot="start" name="add-circle"></ion-icon>
+            {{'addAnomalyButton' | translate}}
+        </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-footer>
