--- a/Ionic4/src/app/inspection-building/inspection-building-hazardous-materials/inspection-building-hazardous-materials.component.html
+++ b/Ionic4/src/app/inspection-building/inspection-building-hazardous-materials/inspection-building-hazardous-materials.component.html
@@ -7,14 +7,25 @@
 </ion-header>
 
 <ion-content>
-
-<p>building-haz mat</p>
-
+  <ion-list class="list-items">
+    <ion-list-header>{{'buildingHazardousMaterial' | translate}}</ion-list-header>
+    <ion-item *ngFor="let mat of hazardousMaterials | orderBy:'hazardousMaterialName'" (click)="onItemClick(mat)">
+      <ion-icon slot="start" name="nuclear"></ion-icon>
+      <ion-label>
+        <h2>{{mat.hazardousMaterialName}} ({{mat.hazardousMaterialNumber}})</h2>
+        <p>{{mat.quantityDescription}}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
 
 <ion-footer>
   <ion-toolbar color="primary">
-
-
+    <ion-buttons>
+      <ion-button (click)="onItemClick(null)">
+        <ion-icon slot="start" name="add-circle"></ion-icon>
+        {{'addHazardousMaterialButton' | translate}}
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-footer>
