--- a/Ionic4/src/app/inspection-building/inspection-building-pnaps/inspection-building-pnaps.component.html
+++ b/Ionic4/src/app/inspection-building/inspection-building-pnaps/inspection-building-pnaps.component.html
@@ -7,14 +7,25 @@
 </ion-header>
 
 <ion-content>
-
-
-
-</ion-content>
-
+    <ion-list class="list-items ion-no-padding">
+      <ion-list-header>PNAPS</ion-list-header>
+      <ion-item *ngFor="let pnap of pnaps | orderBy:'typeDescription'" (click)="onItemClick(pnap.id)" detail="true">
+        <ion-icon name="contact" slot="start"></ion-icon>
+        <ion-label>
+          <h2>{{pnap.typeDescription}}</h2>
+          <p>{{pnap.name}}</p>
+      </ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+  
 <ion-footer>
   <ion-toolbar color="primary">
-
-
+    <ion-buttons slot="start">
+      <ion-button (click)="onItemClick(null)">
+        <ion-icon name="add-circle"></ion-icon>
+        {{'addPnapButton' | translate}}
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-footer>
