feat(#295) Fix menu issues.

--- a/Ionic4/src/app/inspection-building/inspection-building-anomalies/inspection-building-anomalies.component.html
+++ b/Ionic4/src/app/inspection-building/inspection-building-anomalies/inspection-building-anomalies.component.html
@@ -1,7 +1,7 @@
 <ion-header class="page-header" no-padding no-margin>
-  <ion-menu-toggle menu="inspection-menu"></ion-menu-toggle>
+  <ion-menu-toggle menu="inspection-building-menu"></ion-menu-toggle>
   <ion-toolbar color="primary">
-    <ion-menu-button menu="inspection-menu" slot="start"></ion-menu-button>
+    <ion-menu-button menu="inspection-building-menu" class="menu-icon-white" slot="start"></ion-menu-button>
     <ion-title>{{name}}</ion-title>
   </ion-toolbar>
 </ion-header>
