--- a/Ionic4/src/app/inspection-building/inspection-building-details/inspection-building-details.component.html
+++ b/Ionic4/src/app/inspection-building/inspection-building-details/inspection-building-details.component.html
@@ -1,7 +1,7 @@
 <ion-header class="page-header" no-padding no-margin>
-  <ion-menu-toggle menu="inspection-menu"></ion-menu-toggle>
+  <ion-menu-toggle menu="inspection-building-menu"></ion-menu-toggle>
   <ion-toolbar color="primary">
-    <ion-menu-button menu="inspection-menu" slot="start"></ion-menu-button>
+    <ion-menu-button menu="inspection-building-menu" class="menu-icon-white" slot="start"></ion-menu-button>
     <ion-title>{{name}}
     </ion-title>
   </ion-toolbar>
@@ -47,7 +47,6 @@
             </ion-col>
             <ion-col width-50>
               <ion-item>
-                <ion-label position="floating">{{'unit' | translate}}</ion-label>
                 <ion-select class="unit-select" item-end formControlName="idUnitOfMeasureHeight" *ngIf="dimensionUnitOfMeasure" placeholder="{{'unit' | translate}}" okText="Ok" cancelText="{{'cancel' | translate}}">
                   <ion-select-option *ngFor="let t of dimensionUnitOfMeasure | orderBy:'name'" [value]="t.id">{{t.name}}</ion-select-option>
                 </ion-select>
@@ -70,7 +69,6 @@
           </ion-col>
           <ion-col width-50>
             <ion-item>
-              <ion-label position="floating">{{'unit' | translate}}</ion-label>
               <ion-select class="unit-select" item-end placeholder="{{'unit' | translate}}" formControlName="idUnitOfMeasureEstimatedWaterFlow" *ngIf="ratesUnitOfMeasure" okText="Ok" cancelText="{{'cancel' | translate}}">
                 <ion-select-option *ngFor="let t of ratesUnitOfMeasure | orderBy:'name'" [value]="t.id">{{t.name}}</ion-select-option>
               </ion-select>
