--- a/Ionic4/src/app/inspection/inspection-buildings/inspection-buildings.component.html
+++ b/Ionic4/src/app/inspection/inspection-buildings/inspection-buildings.component.html
@@ -1,7 +1,6 @@
 <ion-header class="page-header" no-padding no-margin>
-  <ion-menu-toggle menu="inspection-menu"></ion-menu-toggle>
   <ion-toolbar color="primary">
-    <ion-menu-button menu="inspection-menu" slot="start"></ion-menu-button>
+    <ion-menu-button menu="inspection-menu" class="menu-icon-white" slot="start"></ion-menu-button>
     <ion-title>{{'generalInformation' | translate}}
     </ion-title>
   </ion-toolbar>
